# manga-fetcher

./: .gitignore  README.md  index.html  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json
src/: App.svelte  commands.ts  hooks.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  constants.rs  lib.rs  main.rs  model.rs  service.rs
src-tauri/src/commands/: search.rs
src-tauri/src/model/: aggregate.rs  at_home.rs  chapter.rs  feed_data.rs  manga.rs  manga_data.rs  manga_view.rs  mod.rs  response.rs  statistics.rs
src-tauri/src/service/: search.rs
src/lib/: commands.ts  store.ts
src/lib/components/: ChapterItem.svelte  ChaptersPagination.svelte  Flag.svelte  InfoModal.svelte  LinkMarkdown.svelte  MangaEntry.svelte  MangaInfo.svelte  Markdown.svelte  Modal.svelte  PageButton.svelte  SearchForm.svelte  Status.svelte  VolumeItem.svelte
src/lib/components/ChapterItem/: ChapterItem.svelte  ScanGroupInfoModal.svelte
src/lib/helpers/: pagination.test.ts  pagination.ts
src/lib/icons/: Info.svelte  Link.svelte  Search.svelte
src/pages/: Search.svelte  Title.svelte
src/router/: router.ts
src/routes/: __layout.svelte  index.svelte
src/routes/manga/: [id].svelte
src/theme/: _smui-theme.scss
src/theme/dark/: _smui-theme.scss
