[package]
name = "app"
version = "0.1.0"
description = "Download manga from MangaDex as cbz archive"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/tauri-plugin-log" }
thiserror = "1.0.38"
log = "0.4.17"
futures = "0.3.25"
zip = "0.6.3"
async-recursion = "1.0.0"
bytes = "1.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
